# Heimdall

./: .gitignore  .readthedocs.yaml  DataDescription_CCC.ipynb  README.md  jupyter-log-4443625.txt  jupyter_script.sh  noxfile.py  pyproject.toml  requirements.txt  requirements_dev.txt  train.py
Heimdall/: __about__.py  cell_representations.py  config.yaml  datasets.py  evaluation.py  f_c.py  f_g.py  fc.py  fe.py  fg.py  losses.py  models.py  order.py  reduce.py  samplers.py  tailor.py  task.py  tokenizer.py  trainer.py  utils.py
Heimdall/config/: config.yaml  global_vars.yaml
Heimdall/models/: __init__.py  _flash_attn.py  _head.py  _models.py  _setup.py
Heimdall/scfm_config/: default.yaml
config/: config.yaml  global_vars.yaml
config/dataset/: admixture_sctab.yaml  amb.yaml  cell_cell_interaction.yaml  cell_type_classification.yaml  cell_type_classification_dev.yaml  mpi.yaml  new_sctab_pretrain.yaml  pancreas.yaml  pancreas_2000_genes.yaml  pretrain_10k.yaml  pretrain_dev.yaml  rev_perturb.yaml  reverse_perturbation_prediction.yaml  scdrs.yaml  spatial_neighbor_density.yaml  spatial_neighbor_popular_cell_type.yaml  spatial_neighbor_proportion.yaml  species_esm.yaml  species_humanized.yaml  subtype_classification.yaml  zheng68k.yaml
config/experiments/: admixture_prediction.yaml  cell_cell_interaction.yaml  classification_experiment.yaml  classification_experiment_dev.yaml  cta_pancreas.yaml  cta_zheng68k.yaml  default.yaml  new_sctab_split1.yaml  pancreas.yaml  polygenic_disease_risk.yaml  pretraining.yaml  pretraining_10k.yaml  sctab_split1_all.yaml  spatial_cancer_split1.yaml  spatial_cancer_split1_random.yaml  spatial_cancer_split2.yaml  spatial_cta.yaml  spatial_neighbor_density.yaml  spatial_neighbor_popular_cell_type.yaml  spatial_neighbor_proportion.yaml  species_esm.yaml  species_humanized.yaml  zheng68k.yaml
notebooks/: data_processing_CCC.ipynb  data_processing_cta.ipynb  data_processing_scdrs.ipynb  data_processing_utils.py  demo.ipynb  documentation.txt
plotting/: heatmaps.ipynb
scripts/: train.py
sweeps/: base_sweep.yaml  tmp.yaml
tests/: conftest.py  test_config.py  test_f_c.py  test_f_e.py  test_f_g.py  test_flash_attention.py  test_flash_attn.py  test_integration.py  test_losses.py  test_model.py  test_task.py  test_tokenizer.py  test_trainer.py  test_utils.py
(+331 files in other folders)
